--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./reset-styles.css" />
+    <link rel="stylesheet" href="./styles/reset-styles.css" />
     <link rel="stylesheet" href="./styles.css" />
 
     <title>Anki Flashcard Templates</title>
@@ -33,26 +33,38 @@
         {{definitions}}
       </div>
 
-      <span class="flashcard__label">Help</span>
+      <hr class="flashcard__divider" />
 
-      <ul>
-        <li class="flashcard__sentence-phonetic">{{sentencePhonetic}}</li>
-        <li class="flashcard__sentence-pronunciation">
-          {{sentencePronunciation}}
-        </li>
-      </ul>
+      <details>
+        <summary>
+          <span class="flashcard__label">Help</span>
+        </summary>
 
-      <ul>
-        <li class="flashcard__word-phonetic">{{wordPhonetic}}</li>
-        <li class="flashcard__word-pronunciation">{{wordPronunciation}}</li>
-      </ul>
+        <ul>
+          <li class="flashcard__sentence-phonetic">{{sentencePhonetic}}</li>
+          <li class="flashcard__sentence-pronunciation">
+            {{sentencePronunciation}}
+          </li>
+        </ul>
 
-      <span class="flashcard__label">Translations</span>
+        <ul>
+          <li class="flashcard__word-phonetic">{{wordPhonetic}}</li>
+          <li class="flashcard__word-pronunciation">{{wordPronunciation}}</li>
+        </ul>
+      </details>
 
-      <ul>
-        <li class="flashcard__sentence-translation">{{sentenceTranslation}}</li>
-        <li class="flashcard__word-translation">{{wordTranslation}}</li>
-      </ul>
+      <details>
+        <summary>
+          <span class="flashcard__label">Translations</span>
+        </summary>
+
+        <ul>
+          <li class="flashcard__sentence-translation">
+            {{sentenceTranslation}}
+          </li>
+          <li class="flashcard__word-translation">{{wordTranslation}}</li>
+        </ul>
+      </details>
 
       <hr class="flashcard__divider" />
 
